added scala/spark 4.2 - iupdate to java 35 and scala 3.8.4